third_party/move/move-compiler-v2/tests/checking/naming/unbound_struct_in_current.exp

Diagnostics:
error: undeclared `0x8675309::M::S`
  ┌─ tests/checking/naming/unbound_struct_in_current.move:7:16
  │
7 │     fun bar(): Self::S {
  │                ^^^^^^^

error: undeclared `0x8675309::M::S`
  ┌─ tests/checking/naming/unbound_struct_in_current.move:2:16
  │
2 │     fun foo(s: Self::S): Self::S {
  │                ^^^^^^^

error: undeclared `0x8675309::M::S`
  ┌─ tests/checking/naming/unbound_struct_in_current.move:2:26
  │
2 │     fun foo(s: Self::S): Self::S {
  │                          ^^^^^^^

error: undeclared struct `M::S`
  ┌─ tests/checking/naming/unbound_struct_in_current.move:8:9
  │
8 │         S {}
  │         ^

error: undeclared struct `M::S`
   ┌─ tests/checking/naming/unbound_struct_in_current.move:12:9
   │
12 │         S {} = bar();
   │         ^

error: undeclared struct `M::S`
   ┌─ tests/checking/naming/unbound_struct_in_current.move:13:9
   │
13 │         Self::S {} = bar();
   │         ^^^^^^^

error: undeclared struct `M::S`
   ┌─ tests/checking/naming/unbound_struct_in_current.move:17:13
   │
17 │         let S {} = bar();
   │             ^

error: undeclared struct `M::S`
   ┌─ tests/checking/naming/unbound_struct_in_current.move:18:13
   │
18 │         let Self::S {} = bar();
   │             ^^^^^^^
